(fix - styling) Changed "main" element's "overflow-y" to "auto".

--- a/src/client/shared/ui/layout/two-columns/TwoColumns.module.scss
+++ b/src/client/shared/ui/layout/two-columns/TwoColumns.module.scss
@@ -12,7 +12,7 @@
 
 .main {
   flex: 1;
-  overflow-y: scroll;
+  overflow-y: auto;
   background: #fff;
 }
 
